--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <div class="gate gate-horizontal"></div>
                 </div>
                 <div class="container-img" id="containerImgDog">
-
+                    <img src="/assests/cat.jpg" alt="">
                 </div>
             </div>
             <button class="container-button" id="dogBtn"><i class="fas fa-paw"></i></button>
